# docs/swagger.json
@@ -45,6 +45,48 @@
                 }
             }
         },
+        "/auth/resend-otp": {
+            "post": {
+                "description": "Resend the OTP code for user account activation",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Resend OTP",
+                "parameters": [
+                    {
+                        "description": "Resend OTP information",
+                        "name": "otp",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/konsera-backend_internal_DTO_user.ResendOTPRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OTP resent successfully",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request or failed to resend OTP",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
         "/auth/verify-otp": {
             "post": {
                 "description": "Verify the OTP code for user account activation",
@@ -157,6 +199,17 @@
                     "minLength": 8
                 },
                 "phone": {
+                    "type": "string"
+                }
+            }
+        },
+        "konsera-backend_internal_DTO_user.ResendOTPRequest": {
+            "type": "object",
+            "required": [
+                "profile_id"
+            ],
+            "properties": {
+                "profile_id": {
                     "type": "string"
                 }
             }
